<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ringColor"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/titleLay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white_e"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <superclean.solution.com.superspeed.view.CustomRippleAnnulus
            android:id="@+id/mainAnnulus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:padding="15dp"/>

        <LinearLayout
            android:id="@+id/ramLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:id="@+id/ramText_Pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="49%"
                android:textColor="@color/white_e"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/ramText_Unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="955MB/1.87GB"
                android:textColor="@color/white_e"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/ramText_Tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_ram"
                android:textColor="@color/white_e"
                android:textSize="22sp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_e"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mainRubbish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/back_main_button"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_rubbish"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rubbish_title"
                android:textColor="@color/ringColor"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:alpha="0.1"
            android:background="@color/grey"/>

        <LinearLayout
            android:id="@+id/mainCache"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/back_main_button"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_cache"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/memeory_title"
                android:textColor="@color/ringColor"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>