<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_e"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rubbish_MainLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ringColor"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titleLay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/titleReturn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/titleReturnImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_return_white"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rubbish_title"
                android:textColor="@color/white_e"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rubbish_TopLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/clean_top_banner"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/rubbish_TotalTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="0.0 %"
                android:textColor="#FFFFFF"
                android:textSize="40sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/rubbish_SelectTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:lines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/rubbish_FileBack"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/trans_22"/>

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rubbish_CleanAnimLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/rubbish_DrapBallLay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/rubbish_AnimImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/clean_rubbish_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rubbish_AnimImg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rubbish_AnimTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="36.56 MB"
                    android:textColor="@color/white_e"
                    android:textSize="28sp"/>

                <TextView
                    android:id="@+id/rubbish_AnimTip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_rubbish_anim"
                    android:textColor="@color/white_e"
                    android:textSize="22sp"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/app_LockLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <superclean.solution.com.superspeed.view.CustomExpandListView
                android:id="@+id/rubbish_List"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_e"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"/>

            <LinearLayout
                android:id="@+id/rubbish_CleanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="30dp"
                android:background="@drawable/clean_boost_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="5dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/app_lock_btn_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_home_header_junk_files"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_clean"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>